--- a/.github/workflows/job.yml
+++ b/.github/workflows/job.yml
@@ -2,7 +2,7 @@ name: Update README every 1 hour
 
 on:
   schedule:
-     - cron: '0 13-23/2 * * *'  # Minuto 0 cada 2 horas en dicho horario, horario en utc, +6:00
+     - cron: '0 13-23 * * *'  # Minuto 0 cada 2 horas en dicho horario, horario en utc, +6:00
 #    - cron: '0 * * * *'     # Minuto 0, todos los dias
   workflow_dispatch:
 
